# wormhole-ui-test

./: .gitignore  pyproject.toml  test_rx.py  test_tx.py
regions/: config.py  connect_dialog.py  main_window.py
