[tool.poetry]
name = "wormhole-ui-test"
version = "0.1.0"
description = ""
authors = ["sneakypete81 <sneakypete81@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
clickshot = {path = "../clickshot"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
